@@ -28,7 +28,6 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -437,7 +436,7 @@ public class StreamTool extends ToolBase {
 
       final List<CrawlFile> crawlSeeds = new ArrayList<>();
       for (String crawlRootStr : commaDelimitedFilepaths.split(",")) {
-        Path crawlRootPath = Paths.get(crawlRootStr).normalize();
+        Path crawlRootPath = Path.of(crawlRootStr).normalize();
 
         if (!Files.exists(crawlRootPath)) {
           throw new SolrException(
