@@ -21,7 +21,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.util.Date;
 import java.util.List;
@@ -46,7 +46,7 @@ public class QueryResponseTest extends SolrTestCase {
   public void testRangeFacets() throws Exception {
     XMLResponseParser parser = new XMLResponseParser();
     NamedList<Object> response = null;
-    try (SolrResourceLoader loader = new SolrResourceLoader(Paths.get("").toAbsolutePath());
+    try (SolrResourceLoader loader = new SolrResourceLoader(Path.of("").toAbsolutePath());
         InputStream is = loader.openResource("solrj/sampleRangeFacetResponse.xml")) {
       assertNotNull(is);
 
@@ -111,7 +111,7 @@ public class QueryResponseTest extends SolrTestCase {
   public void testGroupResponse() throws Exception {
     XMLResponseParser parser = new XMLResponseParser();
     NamedList<Object> response = null;
-    try (SolrResourceLoader loader = new SolrResourceLoader(Paths.get("").toAbsolutePath());
+    try (SolrResourceLoader loader = new SolrResourceLoader(Path.of("").toAbsolutePath());
         InputStream is = loader.openResource("solrj/sampleGroupResponse.xml")) {
       assertNotNull(is);
       try (Reader in = new InputStreamReader(is, StandardCharsets.UTF_8)) {
@@ -217,7 +217,7 @@ public class QueryResponseTest extends SolrTestCase {
     XMLResponseParser parser = new XMLResponseParser();
     NamedList<Object> response = null;
 
-    try (SolrResourceLoader loader = new SolrResourceLoader(Paths.get("").toAbsolutePath());
+    try (SolrResourceLoader loader = new SolrResourceLoader(Path.of("").toAbsolutePath());
         InputStream is = loader.openResource("solrj/sampleSimpleGroupResponse.xml")) {
       assertNotNull(is);
       try (Reader in = new InputStreamReader(is, StandardCharsets.UTF_8)) {
@@ -260,7 +260,7 @@ public class QueryResponseTest extends SolrTestCase {
   @Test
   public void testIntervalFacetsResponse() throws Exception {
     XMLResponseParser parser = new XMLResponseParser();
-    try (SolrResourceLoader loader = new SolrResourceLoader(Paths.get("").toAbsolutePath())) {
+    try (SolrResourceLoader loader = new SolrResourceLoader(Path.of("").toAbsolutePath())) {
       InputStream is = loader.openResource("solrj/sampleIntervalFacetsResponse.xml");
       assertNotNull(is);
       Reader in = new InputStreamReader(is, StandardCharsets.UTF_8);
@@ -303,7 +303,7 @@ public class QueryResponseTest extends SolrTestCase {
     XMLResponseParser parser = new XMLResponseParser();
     NamedList<Object> response;
 
-    try (SolrResourceLoader loader = new SolrResourceLoader(Paths.get("").toAbsolutePath());
+    try (SolrResourceLoader loader = new SolrResourceLoader(Path.of("").toAbsolutePath());
         InputStream is = loader.openResource("solrj/sampleDebugResponse.xml")) {
       assertNotNull(is);
       try (Reader in = new InputStreamReader(is, StandardCharsets.UTF_8)) {
